--- a/package.json
+++ b/package.json
@@ -14,28 +14,41 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.3.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "expo": "~48.0.9",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
+    "expo-router": "^1.0.0-rc5",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
-    "expo-router": "^1.0.0-rc5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
+    "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~48.0.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "^4.9.4"
+    "prettier": "2.8.7",
+    "react-test-renderer": "18.2.0"
   },
   "private": true
 }
